--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
 
 # Database
-spring.datasource.url=jdbc:mysql://localhost:3306/desafiodb?useTimezone=true&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://148.71.103.6:3306/desafiodb?useTimezone=true&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=rootroot
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
